--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 
 android {
     namespace 'hu.bme.aut.android.smarthome'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "hu.bme.aut.android.smarthome"
-        minSdk 21
-        targetSdk 32
+        minSdk 23
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -42,13 +42,15 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     //time picker
     implementation 'com.github.kshitijskumar:Ticker:1.0.0'
+    //color picker
+    implementation 'com.github.panshen:GridColorPicker:1.0.0'
     //navigation component
     def nav_version =  "2.5.1"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
