--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     repositories {
         google()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         def nav_version = "2.5.3"
