--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -44,6 +45,9 @@ dependencies {
     implementation 'com.github.kshitijskumar:Ticker:1.0.0'
     //color picker
     implementation 'com.github.panshen:GridColorPicker:1.0.0'
+    //implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation platform('com.google.firebase:firebase-bom:29.3.1')
+    implementation 'com.google.firebase:firebase-auth-ktx'
     //navigation component
     def nav_version =  "2.5.1"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -55,4 +59,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //for firebase auth
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+
+    //for firebase storage
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
 }
