--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     //implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
     //navigation component
     def nav_version =  "2.5.1"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -64,7 +66,7 @@ dependencies {
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
 
-    //for firebase storage
-    implementation 'com.google.firebase:firebase-firestore-ktx'
+    // import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:31.0.3')
 
 }
