--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
     // import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:31.0.3')
 
+    //import coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+
 }
