--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'com.github.kshitijskumar:Ticker:1.0.0'
     //color picker
     implementation 'com.github.panshen:GridColorPicker:1.0.0'
-    //implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
@@ -62,14 +62,17 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
-    //for firebase auth
-    implementation 'com.flaviofaria:kenburnsview:1.0.7'
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
+     implementation 'com.flaviofaria:kenburnsview:1.0.7'
 
     // import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:31.0.3')
 
     //import coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+
+    //retrofit
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
 }
